--- a/dogen-cms/extension.yaml
+++ b/dogen-cms/extension.yaml
@@ -1,21 +1,21 @@
 # Learn detailed information about the fields of an extension.yaml file in the docs:
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
-name: greet-the-world  # Identifier for your extension
+name: dogen-cms  # Identifier for your extension
 version: 0.0.1  # Follow semver versioning
 specVersion: v1beta  # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
-displayName: Greet the world
+displayName: Generate a FREE custom Firestore CMS
 
 # Brief description of the task your extension performs (~1 sentence)
 description: >-
-  Sends the world a greeting.
+  Adds support for Dogen CMS, which allows you to define schemas and validation rules for all your collections. It supports nested objects, arrays, maps, and references.  For more information visit https://www.dogen.io
 
 license: Apache-2.0  # https://spdx.org/licenses/
 
 # Public URL for the source code of your extension
-sourceUrl: https://github.com/firebase/firebase-tools/tree/master/templates/extensions
+sourceUrl: https://github.com/typicalday/dogen-firebase-extensions/dogen-cms
 
 # Specify whether a paid-tier billing plan is required to use your extension.
 # Learn more in the docs: https://firebase.google.com/docs/extensions/reference/extension-yaml#billing-required-field
@@ -29,35 +29,71 @@ billingRequired: false
 # In a `roles` field, list any IAM access roles required for your extension to operate.
 # Learn more in the docs:
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#roles-field
-
+roles:
+  - role: datastore.user
+    reason: Allows the extension to create the user document in Firestore.
+  - role: firebaseauth.viewer
+    reason: >-
+      Allows the extension to read the list of existing users in Firebase
+      
 # In the `resources` field, list each of your extension's functions, including the trigger for each function.
 # Learn more in the docs:
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#resources-field
 resources:
-  - name: greetTheWorld
+  - name: onUserCreate
     type: firebaseextensions.v1beta.function
     description: >-
-      HTTP request-triggered function that responds with a specified greeting message
+      Auth triggered function that creates a new accounts collection document for the user.
     properties:
-      # LOCATION is a user-configured parameter value specified by the user during installation.
       location: ${LOCATION}
-      # httpsTrigger is used for an HTTP triggered function.
-      httpsTrigger: {}
+      eventTrigger:
+        eventType: providers/firebase.auth/eventTypes/user.create
+        resource: projects/${PROJECT_ID}
+      runtime: "nodejs16"
+  - name: onUserDelete
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Auth triggered function that deletes an existing accounts collection document from the deleted user.
+    properties:
+      location: ${LOCATION}
+        eventType: providers/firebase.auth/eventTypes/user.delete
+        resource: projects/${PROJECT_ID}
+      runtime: "nodejs16"
+  - name: backfillExistingUsers
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Cloud task triggered function which backfills existing users in batches into the accounts collection.
+    properties:
+      location: ${param:LOCATION}
+      taskQueueTrigger: {}
+  - name: onAccountsUpdate
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Firestore triggered function which updates Auth user details from the corresponding accounts document changes.
+    properties:
+      location: ${LOCATION}
+      eventTrigger:
+        eventType: providers/cloud.firestore/eventTypes/document.write
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/accounts/{documentID}
       runtime: "nodejs16"
 
 # In the `params` field, set up your extension's user-configured parameters.
 # Learn more in the docs:
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#params-field
 params:
-  - param: GREETING
-    label: Greeting for the world
+  - param: BACKFILL_EXISTING_USERS
+    label: Backfill existing users
     description: >-
-      What do you want to say to the world?
-      For example, Hello world? or What's up, world?
-    type: string
-    default: Hello
+      If you enable this option, the extension will create Firestore user
+      documents for all existing users right after installation is complete.
+    type: select
+    options:
+      - label: Yes
+        value: true
+      - label: No
+        value: false
+    default: true
     required: true
-    immutable: false
 
   - param: LOCATION
     label: Cloud Functions location
@@ -109,3 +145,8 @@ params:
         value: australia-southeast1
     required: true
     immutable: true
+
+lifecycleEvents:
+  onInstall:
+    function: backfillExistingUsers
+    processingMessage: Processing Auth users into accounts collection...
