--- a/dogen-cms/extension.yaml
+++ b/dogen-cms/extension.yaml
@@ -30,11 +30,8 @@ billingRequired: false
 # Learn more in the docs:
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#roles-field
 roles:
-  - role: datastore.user
+  - role: datastore.owner
     reason: Allows the extension to create the user document in Firestore.
-  - role: firebaseauth.viewer
-    reason: >-
-      Allows the extension to read the list of existing users in Firebase
       
 # In the `resources` field, list each of your extension's functions, including the trigger for each function.
 # Learn more in the docs:
