--- a/dogen-cms/extension.yaml
+++ b/dogen-cms/extension.yaml
@@ -72,7 +72,7 @@ resources:
       location: ${LOCATION}
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.write
-        resource: projects/${PROJECT_ID}/databases/(default)/documents/accounts/{documentID}
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/accounts/{userId}
       runtime: "nodejs16"
   - name: onGenerationsCreate
     type: firebaseextensions.v1beta.function
@@ -82,7 +82,7 @@ resources:
       location: ${LOCATION}
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.create
-        resource: projects/${PROJECT_ID}/databases/(default)/documents/generations/{documentID}
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/generations/{generationId}
       runtime: "nodejs16"
 
 # In the `params` field, set up your extension's user-configured parameters.
