--- a/dogen-cms/extension.yaml
+++ b/dogen-cms/extension.yaml
@@ -84,6 +84,15 @@ resources:
         eventType: providers/cloud.firestore/eventTypes/document.create
         resource: projects/${PROJECT_ID}/databases/(default)/documents/generations/{generationId}
       runtime: "nodejs16"
+  - name: updateGenerationWebhook
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Https triggered function which acts a webhook to update the generation status from Dogen services.
+    properties:
+      location: ${LOCATION}
+      dogenApiKey: ${DOGEN_API_KEY}
+      httpsTrigger: {}
+      runtime: "nodejs16"
 
 # In the `params` field, set up your extension's user-configured parameters.
 # Learn more in the docs:
@@ -95,7 +104,7 @@ params:
       You can find your API key in the Dogen dashboard.
     type: string
     required: true
-    
+
   - param: BACKFILL_EXISTING_USERS
     label: Backfill existing users
     description: >-
