--- a/dogen-cms/extension.yaml
+++ b/dogen-cms/extension.yaml
@@ -90,7 +90,6 @@ resources:
       Https triggered function which acts a webhook to update the generation status from Dogen services.
     properties:
       location: ${LOCATION}
-      dogenApiKey: ${DOGEN_API_KEY}
       httpsTrigger: {}
       runtime: "nodejs16"
 
@@ -98,7 +97,7 @@ resources:
 # Learn more in the docs:
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#params-field
 params:
-  - params: DOGEN_API_KEY
+  - param: DOGEN_API_KEY
     label: Dogen API Key
     description: >-
       You can find your API key in the Dogen dashboard.
