feat: add config parameter update writing to RC

--- a/dogen-cms/extension.yaml
+++ b/dogen-cms/extension.yaml
@@ -32,6 +32,8 @@ billingRequired: false
 roles:
   - role: datastore.owner
     reason: Allows the extension to create the user document in Firestore.
+  - role: cloudconfig.admin
+    reason: Allows the extension to update remote config.
       
 # In the `resources` field, list each of your extension's functions, including the trigger for each function.
 # Learn more in the docs:
@@ -83,6 +85,16 @@ resources:
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.create
         resource: projects/${PROJECT_ID}/databases/(default)/documents/generations/{generationId}
+      runtime: "nodejs16"
+  - name: onConfigParameterUpdateWrite
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Firestore triggered function which updates remote config.
+    properties:
+      location: ${LOCATION}
+      eventTrigger:
+        eventType: providers/cloud.firestore/eventTypes/document.write
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/config_parameter_updates/{documentId}
       runtime: "nodejs16"
   - name: updateGenerationWebhook
     type: firebaseextensions.v1beta.function
