--- a/dogen-cms/functions/integration-tests/extensions/dogen-cms.env
+++ b/dogen-cms/functions/integration-tests/extensions/dogen-cms.env
@@ -1,3 +1,5 @@
 BACKFILL_EXISTING_USERS=true
 LOCATION=us-central1
 DOGEN_TRIGGER_GENERATION_URL="http://localhost:8080/generate"
+DOGEN_TRIGGER_PUBLISH_URL="http://localhost:8080/publish"
+DOGEN_TRIGGER_UNPUBLISH_URL="http://localhost:8080/unpublish"
