--- a/dogen-cms/extension.yaml
+++ b/dogen-cms/extension.yaml
@@ -66,7 +66,7 @@ resources:
     properties:
       location: ${LOCATION}
       taskQueueTrigger: {}
-  - name: onAccountsUpdate
+  - name: onAccountUpdate
     type: firebaseextensions.v1beta.function
     description: >-
       Firestore triggered function which updates Auth user details from the corresponding accounts document changes.
