feat: rename core collections to improve organization

--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -72,7 +72,7 @@ resources:
       location: ${LOCATION}
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.create
-        resource: projects/${PROJECT_ID}/databases/(default)/documents/accounts/{userId}
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/dogen_application_accounts/{userId}
       runtime: "nodejs16"
   - name: onAccountUpdate
     type: firebaseextensions.v1beta.function
@@ -82,7 +82,7 @@ resources:
       location: ${LOCATION}
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.update
-        resource: projects/${PROJECT_ID}/databases/(default)/documents/accounts/{userId}
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/dogen_application_accounts/{userId}
       runtime: "nodejs16"
   - name: onGenerationWrite
     type: firebaseextensions.v1beta.function
@@ -92,7 +92,7 @@ resources:
       location: ${LOCATION}
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.write
-        resource: projects/${PROJECT_ID}/databases/(default)/documents/generations/{generationId}
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/dogen_application_generations/{generationId}
       runtime: "nodejs16"
   - name: processJob
     type: firebaseextensions.v1beta.function
