--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -2,7 +2,7 @@
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
 name: dogen-ap  # Identifier for your extension
-version: 0.0.4  # Follow semver versioning
+version: 0.0.5  # Follow semver versioning
 specVersion: v1beta  # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
@@ -32,7 +32,9 @@ billingRequired: true
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#roles-field
 roles:
   - role: datastore.owner
-    reason: Allows the extension to read and create documents in Firestore.
+    reason: Required to read and create documents in Firestore.
+  - role: firebaseauth.admin
+    reason: Required to manage Authentication users.
       
 # In the `resources` field, list each of your extension's functions, including the trigger for each function.
 # Learn more in the docs:
