--- a/dogen-ap/functions/package.json
+++ b/dogen-ap/functions/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "typescript": "^4.9.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
@@ -23,7 +24,6 @@
     "eslint": "^8.15.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-config-google": "^0.14.0",
-    "typescript": "^4.9.0",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "ts-node": "^10.4.0"
