--- a/dogen-ap/functions/package.json
+++ b/dogen-ap/functions/package.json
@@ -11,9 +11,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
+    "axios": "^1.6.2",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0",
-    "axios": "^1.6.2",
     "typescript": "^4.9.0"
   },
   "devDependencies": {
@@ -21,10 +22,10 @@
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.15.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-config-google": "^0.14.0",
     "chai": "^4.3.7",
+    "eslint": "^8.15.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.26.0",
     "mocha": "^10.2.0",
     "ts-node": "^10.4.0"
   },
