--- a/dogen-ap/functions/integration-tests/extensions/dogen-ap.env
+++ b/dogen-ap/functions/integration-tests/extensions/dogen-ap.env
@@ -5,6 +5,7 @@ FIREBASE_CONFIG_APP_ID="foo"
 FIREBASE_CONFIG_API_KEY="foo"
 FIREBASE_CONFIG_AUTH_DOMAIN="foo"
 FIREBASE_CONFIG_MESSAGING_SENDER_ID="foo"
+WEBHOOK_VALIDATION_SALT="foo"
 BACKFILL_EXISTING_USERS=true
 LOCATION=us-central1
 DOGEN_REGISTRATION_URL=http://127.0.0.1:5051/demo-test/us-central1/onRegistrationRequest
