fix: case sensitivity issue with JSONStream

--- a/dogen-ap/functions/tsconfig.json
+++ b/dogen-ap/functions/tsconfig.json
@@ -1,12 +1,17 @@
 {
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2020",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]    
   },
   "compileOnSave": true,
   "include": [
