--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -2,7 +2,7 @@
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
 name: dogen-ap # Identifier for your extension
-version: 2.2.0 # Follow semver versioning
+version: 2.2.1 # Follow semver versioning
 specVersion: v1beta # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
@@ -10,7 +10,7 @@ displayName: Dogen Application Platform
 
 # Brief description of the task your extension performs (~1 sentence)
 description: >-
-  Meet Dogen, the web client that redefines data management. Dogen combines the flexibility of a Firestore client with the user-friendly features we've come to love from CMSs.  For more information visit https://www.dogen.io.
+  Wave goodbye to custom coding and error prone data entry. Dogen automatically manages even the most intricate Firestore data, letting you focus on building your next big idea rather than customizing a CMS.
 
 license: Apache-2.0 # https://spdx.org/licenses/
 
@@ -116,15 +116,6 @@ params:
       existing Dogen account, provide the registration email address.
     type: string
     required: true
-
-  - param: DOGEN_INVITATION_CODE
-    label: Dogen Invitation Code
-    description: >-
-      Dogen is in private alpha. If you do not provide an invitation code, you will be
-      added to the waitlist.  We will send you a confirmation email shortly, and another once 
-      we are ready to onboard you.
-    type: string
-    required: false
 
   - param: DOGEN_API_KEY
     label: Dogen API Key
