--- a/dogen-ap/functions/.mocharc.json
+++ b/dogen-ap/functions/.mocharc.json
@@ -1,5 +1,5 @@
 {
-  "require": "ts-node/register",
+  "require": ["ts-node/register", "./integration-tests/setup.ts"],
   "extensions": ["ts", "tsx"],
   "spec": [
     "integration-tests/**/*.spec.*"
