--- a/dogen-ap/functions/package.json
+++ b/dogen-ap/functions/package.json
@@ -7,7 +7,8 @@
     "build:watch": "tsc --watch",
     "mocha": "mocha '**/*.spec.ts'",
     "test": "(cd integration-tests && firebase emulators:exec 'npm run mocha' -P demo-test)",
-    "emulate": "npm run build:watch | (cd integration-tests && firebase emulators:start --only auth,functions,firestore,extensions --project=demo-test --import ./data --export-on-exit data)"
+    "emulate": "npm run build:watch | (cd integration-tests && firebase emulators:start --only auth,functions,firestore,extensions --project=demo-test --import ./data --export-on-exit data)",
+    "test:storage": "TS_NODE_FILES=true mocha --require ts-node/register 'integration-tests/storage/*.spec.ts'"
   },
   "main": "lib/index.js",
   "dependencies": {
