--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -2,7 +2,7 @@
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
 name: dogen-ap # Identifier for your extension
-version: 3.0.1 # Follow semver versioning
+version: 3.1.0 # Follow semver versioning
 specVersion: v1beta # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
@@ -55,6 +55,16 @@ resources:
     properties:
       location: ${LOCATION}
       taskQueueTrigger: {}
+      runtime: "nodejs18"
+  - name: onApplicationUpdate
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Firestore triggered function which updates CORS configuration when application aliases change.
+    properties:
+      location: ${LOCATION}
+      eventTrigger:
+        eventType: providers/cloud.firestore/eventTypes/document.write
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/dogen/application
       runtime: "nodejs18"
   - name: onAccountCreate
     type: firebaseextensions.v1beta.function
