--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -14,6 +14,10 @@ description: >-
 
 license: Apache-2.0 # https://spdx.org/licenses/
 
+icon: icon.png
+
+tags: [utilities]
+
 # Public URL for the source code of your extension
 sourceUrl: https://github.com/typicalday/dogen-firebase-extensions/dogen-ap
 
