--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -2,7 +2,7 @@
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
 name: dogen-ap # Identifier for your extension
-version: 3.2.0 # Follow semver versioning
+version: 3.2.1 # Follow semver versioning
 specVersion: v1beta # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
@@ -60,7 +60,7 @@ resources:
       location: ${LOCATION}
       taskQueueTrigger: {}
       runtime: "nodejs18"
-  - name: onApplicationUpdate
+  - name: onApplicationWrite
     type: firebaseextensions.v1beta.function
     description: >-
       Firestore triggered function which updates CORS configuration when application aliases change.
